Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17926

CMake: Setting's value disappears when changing its name

XMLWordPrintable

      1. Open a CMake project.
      2. Open the project's build configuration.
      3. Add a setting:
      4. Change the setting's name.
        The value disappears:

      A setting's value should be preserved when changing the name.

        1. bad.png
          bad.png
          1 kB
        2. good.png
          good.png
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes